--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,65 @@
 html {
-  background-color: greenyellow;
+  font-family: "Bricolage Grotesque", sans-serif;
+  line-height: 1.5;
+  color: #defaf8;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 2rem;
+  background: linear-gradient(180deg, #1f1c2c 0%, #1f1c2c 100%);
+}
+
+.button {
+  cursor: pointer;
+  font-family: "Raleway", sans-serif;
+  font-size: 1rem;
+  padding: 0.5rem 1.5rem;
+  border: none;
+  border-radius: 4px;
+  background-color: #5d0909;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+  color: #fff;
+}
+
+.button:hover,
+.button:focus {
+  background-color: #3e0505;
+}
+
+.button-text {
+  background: transparent;
+  border: none;
+  padding: 0;
+  font-family: "Raleway", sans-serif;
+  font-size: 1rem;
+  color: #5d0909;
+}
+
+@keyframes slide-down-fade-in {
+  from {
+    opacity: 0;
+    transform: translateY(-3rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slide-up-fade-in {
+  from {
+    opacity: 0;
+    transform: translateY(3rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
